<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SegitigaActivity">

    <TextView
        android:id="@+id/rumusSegitiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:text="@string/rumus_segitiga"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="5dp" />


    <TextView
        android:id="@+id/Nilai_a"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginBottom="576dp"
        android:text="@string/masukkan_nilai_a"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/ed_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Nilai_b"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginBottom="488dp"
        android:text="@string/masukkan_nilai_b"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/ed_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="340dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Nilai_c"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginBottom="384dp"
        android:text="@string/masukkan_nilai_c"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />


    <EditText
        android:id="@+id/ed_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="428dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnhitung"
        android:layout_width="119dp"
        android:layout_height="63dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="156dp"
        android:text="@string/hitung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hasill"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginStart="276dp"
        android:layout_marginBottom="96dp"
        android:text="@string/hasil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Hasil"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="96dp"
        android:text="Hasill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>