<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersegiPjgActivity">

    <TextView
        android:id="@+id/rumusPersegiPjg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="156dp"
        android:text="@string/rumuspersegipjg"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="5dp" />

    <TextView
        android:id="@+id/NilaiPanjang"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginBottom="600dp"
        android:text="@string/masukkan_nilai_panjang"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/ed_panjang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="532dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/NilaiLebar"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginBottom="480dp"
        android:text="@string/masukkan_nilai_lebar"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/ed_lebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="412dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnhitung"
        android:layout_width="119dp"
        android:layout_height="63dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="196dp"
        android:text="@string/hitung"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/hasill"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:layout_marginStart="276dp"
        android:layout_marginBottom="136dp"
        android:text="@string/hasil"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Hasil"
        android:layout_width="98dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="128dp"
        android:text="Hasill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>